; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_readdir_r.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_readdir_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.dirent = type { i32 }
%struct._reent = type { i32 }

@EBADF = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @readdir_r(%struct.TYPE_5__* %0, %struct.dirent* %1, %struct.dirent** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.dirent*, align 8
  %7 = alloca %struct.dirent**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct._reent*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.dirent* %1, %struct.dirent** %6, align 8
  store %struct.dirent** %2, %struct.dirent*** %7, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @get_vfs_for_index(i32 %13)
  store i32* %14, i32** %8, align 8
  %15 = call %struct._reent* (...) @__getreent()
  store %struct._reent* %15, %struct._reent** %9, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* @EBADF, align 4
  store i32 %19, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %29

20:                                               ; preds = %3
  %21 = load i32, i32* %10, align 4
  %22 = load %struct._reent*, %struct._reent** %9, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %25 = load %struct.dirent*, %struct.dirent** %6, align 8
  %26 = load %struct.dirent**, %struct.dirent*** %7, align 8
  %27 = call i32 @CHECK_AND_CALL(i32 %21, %struct._reent* %22, i32* %23, i32 (%struct.TYPE_5__*, %struct.dirent*, %struct.dirent**)* @readdir_r, %struct.TYPE_5__* %24, %struct.dirent* %25, %struct.dirent** %26)
  %28 = load i32, i32* %10, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %20, %18
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32* @get_vfs_for_index(i32) #1

declare dso_local %struct._reent* @__getreent(...) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32 (%struct.TYPE_5__*, %struct.dirent*, %struct.dirent**)*, %struct.TYPE_5__*, %struct.dirent*, %struct.dirent**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
